# redrob-ranking-system

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-platform.txt  submission_metadata.yaml
core/: cleaning.py  config.py  loading.py  schema.py
core/features/: __init__.py  behavioral.py
docker/: Dockerfile
docs/: architecture.md
scripts/: extract_fixtures.py
tests/: conftest.py
tests/fixtures/: sample_candidates.json  synthetic_edge_cases.json
tests/test_core/: test_cleaning.py  test_config.py  test_loading.py  test_schema.py
tests/test_core/test_features/: __init__.py  test_behavioral.py
